# meridian-compliance-orchestrator

./: .gitignore  main.py  pyproject.toml
.github/workflows/: trufflehog.yml
data/compliance_corpus/: ECHA_REACH_Guidance_R1_2024.md  Meridian_Internal_Compliance_Policy_v3.md  OFSI_Sanctions_Simulator_2024Q4.md
docs/ARTIFACTS/: 01_USE_CASE_CHARTER.md  02_COUNTERFACTUAL_MEMO.md  03_ROI_MODEL.md  04_RISK_REGISTER.md  05_APPROVAL_MATRIX.md  06_TELEMETRY_ARCHITECTURE.md  07_IDENTITY_MATRIX.md  08_SOURCE_OF_TRUTH_MATRIX.md  09_GROUNDING_POLICY.md  10_PEER_REVIEW_RECORD.md  ARCHITECTURE_DIAGRAM_V1.md
docs/adr/: 17_ARCHITECTURE_DECISION_RECORD.md
examples/: auth_smoke_test.py  hello_langsmith_trace.py
infra/: identity_rbac.bicep  identity_rbac.json
infra/parameters/: identity_rbac.dev.bicepparam
src/orchestrator/: auth.py
src/retrieval/: ingestion.py
